# surgent

./: .dockerignore  .gitignore  .ignore  .prettierignore  AGENTS.md  AWS-GUIDE.md  BrianNote.txt  CONTRIBUTING.md  GHL-WEAKNESSES-RESEARCH.md  NOTICE  PROD-GUIDE.md  README.md  SECURITY.md  cleanup.md  docker-compose.dev.yml  docker-compose.yml  elasticmq.conf  flake.nix  goodpattern.md  opencode-commits-1.0.200-1.1.1-full.txt  package.json  setup-opencode-config.sh  turbo.json  upstream-pulling.md
apps/pay/: .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  env.example  package.json  surpay.nomad.hcl
apps/pay/.cargo/: config.toml
apps/pay/.sqlx/: query-00f4e40a03b328e1dc6aab4efb242550298df28f08be538246336765c68da6ff.json  query-022a2fa76da4bd5ce4211ccc957f281ef0d2676a1c14cff87e4e72d0edc00139.json  query-03425e457a0214fb966ce9a6160f5f332403bb409214eec521831e8a4e8dff14.json  query-0727bdac1f1c27c91d4614078d6f2f335c110d7293609a6b28c149c8335b4010.json  query-074f3e91dc256beb571d828ca58f9e2d34255be326e968c981317cc7870d3279.json  query-086adf8749b0b7e1bac2313b2382ed4fcdf6c1d1fe37dd98b1bdd9bbbf405430.json  query-09f7758b40636135e9472dc0f16bd71a29048219b7f4fc017ef22715de28bf69.json  query-0a3104631b9a288e2c55ed47fc0fb1fca221356eba5df6c38934ba56baeb0828.json  query-0ae52ab9a114a92549ad3d713a2fab100704fd2eb59c654c5b379c9e944de24d.json  query-0cb1ad0e86f1c1b524ef7cd480ce30f2ecaa13bf4bb5712c20b21803cf60de13.json  query-0dc28bac48a5a7ca876a3bbdbb02583b59fc1cca2bef2fcef8c9ffc195d69bd5.json  query-0f098967e2110ef4ae40f61aa5d36abeacc51a27523c0b5a4a065c6f682e3b89.json  query-1075f502a0dcca9fbbbdf8e197006c06117ca04c73844d25d33eda5ae270e6bc.json  query-121960939ef58055e66729c19e60c04228d14063464defdc44ff05e530953bc0.json  (+132 more)
apps/pay/docs/: product-prices.md  products.md  (+1 more)
(+830 files in other folders)
