[package]
name = "surpay"
version = "0.2.0"
edition = "2024"
default-run = "surpay"

[dependencies]

async-trait = "0.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.81.0"
axum = "0.8.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
governor = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "form", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "chrono"] }
subtle = "2.5"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5"
urlencoding = "2.1"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.5"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = "thin"          # Link-time optimization for smaller/faster binary
codegen-units = 1     # Better optimization, single codegen unit
strip = "symbols"     # Remove symbols from binary
panic = "abort"       # Smaller binary, no unwinding overhead
